can create IAudioProcessor

--- a/Audio.Vst.Unmanaged/Audio.Vst.Unmanaged.vcxproj.filters
+++ b/Audio.Vst.Unmanaged/Audio.Vst.Unmanaged.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="VstHostApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VstHost.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
