--- a/Audio.Vst.Unmanaged/Audio.Vst.Unmanaged.vcxproj
+++ b/Audio.Vst.Unmanaged/Audio.Vst.Unmanaged.vcxproj
@@ -91,21 +91,27 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Audio.Vst.Unmanaged.h" />
+    <ClInclude Include="AudioProcessor.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ParameterChanges.h" />
+    <ClInclude Include="ParamValueQueue.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PluginLibrary.h" />
     <ClInclude Include="VstCom.h" />
+    <ClInclude Include="VstHost.h" />
     <ClInclude Include="VstHostApplication.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AudioProcessor.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="ParameterChanges.cpp" />
+    <ClCompile Include="ParamValueQueue.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PluginLibrary.cpp" />
     <ClCompile Include="VstHost.cpp" />
-    <ClCompile Include="VstHost.h" />
     <ClCompile Include="VstHostApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
