--- a/Audio.Vst.Unmanaged/Audio.Vst.Unmanaged.vcxproj.filters
+++ b/Audio.Vst.Unmanaged/Audio.Vst.Unmanaged.vcxproj.filters
@@ -33,6 +33,18 @@
     <ClInclude Include="VstHostApplication.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VstHost.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AudioProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParamValueQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ParameterChanges.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -41,9 +53,6 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="VstHost.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="PluginLibrary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -51,6 +60,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VstHost.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AudioProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ParamValueQueue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ParameterChanges.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
