--- a/Test/Test.Audio.Vst.Unmanaged/Test.Audio.Vst.Unmanaged.vcxproj
+++ b/Test/Test.Audio.Vst.Unmanaged/Test.Audio.Vst.Unmanaged.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="Test.Audio.Vst.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
