center incoming and recorded mono sources

--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="MidiEvents.h" />
     <ClInclude Include="MidiInput.h" />
     <ClInclude Include="MidiMessage.h" />
+    <ClInclude Include="MixParameter.h" />
     <ClInclude Include="ObjectFactory.h" />
     <ClInclude Include="OutputFloat32ChannelPair.h" />
     <ClInclude Include="OutputInt24ChannelPair.h" />
