ProcessingContext with sample positions for loop

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Audio.Asio/TestResults/
 /Audio.Asio.Unmanaged/int/Release/x64
 /Test/RepeatMyself/x64/Release
 /x64/Release
+/Test/RepeatMyself/fred_1.dat
