add memory leak checks to unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Audio.Asio/TestResults/
 /Test/RepeatMyself/x64/Release
 /x64/Release
 /Test/RepeatMyself/fred_1.dat
+/Test/Test.Audio.Common/x64/Debug
