RepeateMyself: Looper and LooperConfig in separate class

--- a/Test/RepeatMyself/RepeatMyself.vcxproj.filters
+++ b/Test/RepeatMyself/RepeatMyself.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Looper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LooperConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SteinbergUrRt2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Looper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LooperConfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
