--- a/Test/RepeatMyself/RepeatMyself.vcxproj
+++ b/Test/RepeatMyself/RepeatMyself.vcxproj
@@ -63,6 +63,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(ProjectDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -89,6 +90,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(ProjectDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -108,6 +110,8 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Looper.cpp" />
+    <ClCompile Include="LooperConfig.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -116,6 +120,8 @@
     <ClCompile Include="SteinbergUrRt2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Looper.h" />
+    <ClInclude Include="LooperConfig.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SteinbergUrRt2.h" />
   </ItemGroup>
